[ADD] rederizar paginas, filtrar por almacenamiento y filtro segun el tipo de pokemon

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -10,7 +10,7 @@
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
 }
-
+/* 
 .image {
     transform: translateY(-50%);
-}
+} */
