--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(180deg, #0d3869, #fff);
+  min-height: 100vh;
 }
 
 code {
