--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,8 +1,70 @@
 .container {
+    color: white;
     display: flex;
     flex-direction: column;
     margin: auto;
     width: 75%;
-    background-color: black;
+    background-color: transparent;
 }
 
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* height: 3em; */
+    font-size: 1.5em;
+    padding: 2em 0;
+    border-bottom: .1em solid #ccc;
+}
+
+/* .header_title {
+    border-bottom: .1em solid #ccc;
+} */
+
+.create {
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    /* border-bottom:.1em solid #ccc; */
+}
+
+.createText {
+    margin-right: .5em;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+}
+
+.filters {
+    display: flex;
+    text-align: center;
+    justify-content: space-evenly;
+    padding: 1em 0;
+    border-bottom: .1em solid #ccc;
+}
+
+.types {
+    width: 10em;
+}
+
+.storage {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.storage_choice {
+    display: flex;
+    gap: .5em;
+    margin: .5em 0;
+}
+
+.paginate {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2.5em 10em;
+}
