[UPDATE] mejoras en los estilos

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,5 +1,4 @@
 .container {
-    background-color: beige;
     text-decoration: none;
     color: black;
     display: flex;
@@ -7,10 +6,9 @@
     width: 11em;
     padding: 0 2em;
     margin-top: 3em;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
+    border-radius: 5%;
 }
-/* 
+
 .image {
     transform: translateY(-50%);
-} */
+}
