--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -3,5 +3,5 @@
     flex-wrap: wrap;
     gap: 3em;
     justify-content: center;
-    background-color: aquamarine;
+    background-color: transparent;
 }
