[UPDATE] arreglo de bug en filtrado por tipo

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,6 +1,6 @@
 .container {
     text-decoration: none;
-    color: black;
+    color: white;
     display: flex;
     flex-direction: column;
     width: 11em;
@@ -11,4 +11,7 @@
 
 .image {
     transform: translateY(-50%);
+}
+.container{
+    color: black;
 }
