--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -50,11 +50,22 @@
     width: 10em;
     text-align: center;
 }
+.types_selected{
+    margin-top: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.types_selected_btn:hover{
+    cursor: pointer;
+    background-color:#fc746a;
+    border-color: #fc746a;
+    box-shadow: 0px 0px 2px #000;
+}
 
 .storage {
     display: flex;
     flex-direction: column;
-
 }
 
 .storage_choice {
