--- a/client/src/components/ModalPokemon/ModalPokemon.module.css
+++ b/client/src/components/ModalPokemon/ModalPokemon.module.css
@@ -1,28 +1,44 @@
-.loading {
+.container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
-    backdrop-filter: blur(2px);
+    z-index: 1;
+    backdrop-filter: blur(4px);
+    /* flex-direction: column; */
+    color: white;
 }
 
-.spinner {
-    background-image: url('../../assets/bg-pokeball.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 7em;
-    height: 7em;
-    margin-right: 3em;
+.image {
+    width: 25%;
 }
 
-.loading_text {
-    font-size: 2.5em;
-    color: #f6f833;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0);
+.details {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 5em;
+}
+.description{
+    display: flex;
+    flex-direction: column;
+}
+
+.btn_close {
+    cursor: pointer;
+    position: absolute;
+    top: 15em;
+    right: 25em;
+    width: 5em;
+}
+.link{
+    margin-top: 5em;
+    color: white;
+    font-size: 1em ;
 }
