--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,3 +1,77 @@
-.container{
-    
+.container {
+    display: flex;
+    margin: auto;
+    margin-top: 3em;
+    color: rgb(0, 0, 0);
+    font-weight: 900;
+}
+
+.input {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-bottom: .5em;
+}
+
+.label {
+    min-width: 5em;
+    padding-right: 1em;
+    text-align: right;
+}
+
+.input input {
+    background-color: transparent;
+    flex: 1;
+    padding: .5em;
+    /* border: 1px 0px solid #ccc; */
+    border: none;
+    border-bottom: .2em solid #0e396a;
+    outline: none;
+    border-radius: .25em;
+}
+
+.input input:focus {
+    border-color: black;
+    box-shadow: 0px 0px 4px 1px black;
+}
+
+.input input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.input p {
+    position: absolute;
+    left: 100%;
+    width: 150%;
+    margin-left: 1em;
+    color: red;
+}
+
+.types_selected {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.types_selected:hover {
+    cursor: pointer;
+    background-color: #fc746a;
+    border-color: #fc746a;
+    box-shadow: 0px 0px 2px #000;
+}
+
+.send_btn {
+    display: block;
+    width: 50%;
+    margin: 1em auto;
+    background-color: #78b1f3;
+    border: .2em solid #c1dcfa;
+    border-radius: .3em;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.send_btn:disabled {
+    background-color: #fff;
+    cursor: not-allowed;
 }
