--- a/client/src/pages/Create/Create.module.css
+++ b/client/src/pages/Create/Create.module.css
@@ -1,3 +1,14 @@
 .container {
-    
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: 75%;
+    background-color: transparent;
+}
+
+.header{
+    text-align: center;
+    font-size: 1.5em;
+    border-bottom: .1em solid #ccc;
 }
