--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -11,26 +11,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* height: 3em; */
     font-size: 1.5em;
-    padding: 2em 0;
+    padding: 1.5em 0;
     border-bottom: .1em solid #ccc;
 }
 
-/* .header_title {
-    border-bottom: .1em solid #ccc;
-} */
+.header_title {
+    border-bottom: .1em solid transparent;
+}
 
 .create {
     text-decoration: none;
     color: white;
     display: flex;
     align-items: center;
-    /* border-bottom:.1em solid #ccc; */
+    border-bottom: .1em solid transparent;
+    transition: border-color 0.3s ease;
 }
 
 .createText {
     margin-right: .5em;
+}
+
+.create:hover {
+    border-bottom: .1em solid white;
 }
 
 .icon {
@@ -50,15 +54,17 @@
     width: 10em;
     text-align: center;
 }
-.types_selected{
+
+.types_selected {
     margin-top: 1.5em;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.types_selected_btn:hover{
+
+.types_selected_btn:hover {
     cursor: pointer;
-    background-color:#fc746a;
+    background-color: #fc746a;
     border-color: #fc746a;
     box-shadow: 0px 0px 2px #000;
 }
