[ADD] nuevo modal en la vista, para retornar en todos los casos

--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -30,12 +30,12 @@
 
 .name {
     font-size: 1.2em;
-    text-align: center;
+    text-align: justify;
     margin: auto;
 }
 
 .types {
     font-size: 1.2em;
-    text-align: center;
+    text-align: justify;
     margin: auto;
 }
