--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     border-bottom: .1em solid transparent;
-    transition: border-color 0.3s ease;
+    transition: .3s ease all;
 }
 
 .createText {
@@ -35,6 +35,7 @@
 
 .create:hover {
     border-bottom: .1em solid white;
+    transform: scale(1.4);
 }
 
 .icon {
@@ -48,6 +49,10 @@
     justify-content: space-evenly;
     padding: 1em 0;
     border-bottom: .1em solid #ccc;
+}
+
+.order {
+    text-align: center;
 }
 
 .types {
