--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -4,10 +4,12 @@
     display: flex;
     flex-direction: column;
     width: 11em;
-    padding: 0 2em;
+    padding: 0 1em;
     margin-top: 3em;
     border-radius: 5%;
     min-height: 20em;
+    text-shadow: .5px .5px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 16px 2px rgba(0, 0, 0, 0.5);
 }
 
 .container:hover {
@@ -30,7 +32,7 @@
 
 .name {
     font-size: 1.2em;
-    text-align: justify;
+    text-align: center;
     margin: auto;
 }
 
