--- a/client/src/pages/Create/Create.module.css
+++ b/client/src/pages/Create/Create.module.css
@@ -5,6 +5,7 @@
     margin: auto;
     width: 75%;
     background-color: transparent;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .header{
