--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,11 +1,21 @@
 .container {
     display: flex;
-    margin: auto;
-    margin-top: 2em;
-    /* color: rgb(0, 0, 0); */
+    justify-content: start;
+    margin: 2em 0;
     font-weight: 900;
     font-size: 1em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.description_image {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    padding:2em;
+}
+
+.description_image a{
+    color: #0e396a;
 }
 
 .input {
@@ -73,7 +83,7 @@
     border: .2em solid #c1dcfa;
     border-radius: .3em;
     font-size: 1.2em;
-    cursor: pointer;    
+    cursor: pointer;
 }
 
 .send_btn:disabled {
@@ -82,7 +92,7 @@
     color: #505152;
 }
 
-.send_btn:hover{
+.send_btn:hover {
     transform: scale(1.2);
     transition: .3s ease all;
 }
